@@ -1,4 +1,7 @@
 2011-07-01 gabriel.oliveira
+* Refactor javascript to apply inside new ung structure
+
+2011-07-01 gabriel.oliveira
 * Refactor css to apply inside new ung structure
 
 2011-07-01 gabriel.oliveira
